assets/CSS/style.css
* {
    box-sizing: border-box;
    padding: 0;
    margin: 0;
    font-family:Arial, Helvetica, sans-serif;
    flex-wrap:wrap;
}

/* HEADER */

/* header styling */
header {
    padding: 20px;
    background-color: #474a4b;
    color: #ffffff;
}

header h1 {
    display: inline-block;
    font-size: 40px;
}

header nav {
    padding-top: 15px;
    margin-right: 20px;
    float: right;
    font-size: 24px;
}

nav ul li {
    display: inline-block;
    margin-left: 25px;
}

a, a:hover, a:focus, a:active {
    text-decoration: none;
    color: white;
}
/* BODY */

/* background color*/
body {
    background-color: #bbbbb9;
}

/*** SECTIONS ***/

h1 {
    margin-left: 10px;
    text-align: left;
    font-size: 40px;
}

/* CONTAINERS */

/* About Me Container */
.container-1 {
    display: flex;
}

.about-me {
    flex: 1;
    /* padding-top: 2%; */
    padding: 20px;
    border-right: black 5px solid;
    text-align: right;
    /* width: 30%; */
}

.about-me-text {
    flex: 3;
    padding: 20px;
    width: 70%;
}

/* Work Container */
.container-2 {
    display: flex;
    /* flex-wrap: wrap; */
    /* padding: 1%; */
}

.work {
    flex: 1;
    padding: 20px;
    border-right: black 5px solid;
    /* width: 30%; */
    text-align: right;
}

.work-photos {
    width: 70%;
    align-items: right;
    flex: 3;
    padding: 20px;
}

/* NEED TO FIND A WAY TO MAKE THIS PIC TAKE UP WHOLE FIRST LINE OF WORK */
.surf {
    width: 800px;
    height: 400px;
    order: 0;
}


.parent {
    position: relative;
}


.child {
    position: absolute;
    top: 60px;
    left: 10px;
    background-color: #2aefcb;
    border:#474a4b solid 3px;
    /* z-index: 1; */
}

.dog {
    flex: 1;
    width: 200px;
    height: 200px;
    order: 1;
}

.cherry {
    flex: 1;
    width: 200px;
    height: 200px;
    order: 2;
}

.dice {
    flex: 1;
    width: 200px;
    height: 200px;
    order: 3;
}

.meep {
    flex: 1;
    width: 200px;
    height: 200px;
    order: 4;
}

/* Contact Me Container */
.container-3 {
    display: flex;
}

.contact {
    flex: 1;
    text-align: right;
    border-right: black 5px solid;
    padding: 20px;
    scroll-behavior: smooth;
}

.contact-info {
    display: flex;
    flex: 3;
    padding: 20px;
    justify-content: space-around;
}



/* Added some padding and styling for the photos */
img {
    padding: 8px;
    border: 1px solid #bfbfbf;
    background-color: #474a4b;
    display: block;
    float: right;
    z-index: 0;
}

.me {
    border: none;
    height: 200px;
    width: 150px;
}

/* hover to change color over photos */
img:hover {
    background-color: #57b3bb;
    color: #89bdb7;
}

@media screen and (max-width: 768px) {
    flex-direction::content 
}

